# component-scene

./: .gitignore  CMakeLists.txt
include/: firefly-color.h  firefly-fixed.h  firefly-scene-private.h  firefly-scene.h
src/: color.c  fixed.c  fonts.h  node-anchor.c  node-box.c  node-fill.c  node-group.c  node-image.c  node-label.c  node-qr.c  node.c  scene.c  scene.h  utils.c
tools/: package-lock.json
tools/lib/font-gen/: bdf.d.ts  bdf.d.ts.map  bdf.js  bdf.js.map  extra.d.ts  extra.d.ts.map  extra.js  extra.js.map  fonts.d.ts  fonts.d.ts.map  fonts.js  fonts.js.map  generate.d.ts  generate.d.ts.map  generate.js  generate.js.map
tools/reference/: generate-scale.c
tools/src.ts/font-gen/: bdf.ts  extra.ts  fonts.ts  generate.ts
