idf_component_register(
  SRCS
    "src/color.c"
    "src/curves.c"
    "src/fixed.c"
    "src/node.c"
    "src/node-anchor.c"
    "src/node-box.c"
    "src/node-fill.c"
    "src/node-group.c"
    "src/node-image.c"
    "src/node-label.c"
    "src/node-qr.c"
    "src/scene.c"
    "src/utils.c"

  INCLUDE_DIRS
    "include"
)
